fix(backend): anchor startup timings on JVM start so the dump stops hiding four seconds (#469)
StartupTimingService took its reference from an Instant.now() in its own
static initialiser, on the stated premise that the class loads in the first
moments of boot. Measured against a packaged sidecar it does not: class
initialisation landed 3.81 s and 4.02 s after JVM start across two boots of
the same build, because the jpackage launcher, the JVM and Spring's AOT class
loading all run before anything in this class can read a clock.

That time is boot the user waits through, so leaving it out understated the
whole sequence. A start the JVM itself clocked at 17.4 s was reported by
startup-timings.json as 13.3 s - 23 % of it invisible, in the one artifact a
closed-beta tester sends back when the application feels slow. Found by
reading a tester's diagnostic bundle next to the same run's mail.log, where
Spring's own "process running for 17.212" contradicted the dump.

The anchor is now ManagementFactory.getRuntimeMXBean().getStartTime(), and a
phase offset adds the wall-clock distance from JVM start to class
initialisation onto the existing monotonic measurement. Wall clock for that
one constant because it is the only clock relatable to an epoch-millis MXBean
value; nanoTime for everything after it, so a clock adjustment mid-boot can
shift the constant but cannot distort a phase duration. java.management was
already in the sidecar's --add-modules list and the jdeps step there fails the
build on a module the list does not carry.

Also cuts a new release-candidate sheet, because backend/src moved. The
a2caa27 sheet is superseded by the rule its own closing paragraph states: the
object id went from 6c59df1e87ea to 6eb6fc4973c5 across #467, #468 and this
commit, so its section 1 no longer describes the tree it was taken from. The
other six paths are unchanged, so section 2 carries forward computed rather
than assumed. The new sheet names the tree by object id rather than by SHA